backup is completed but not tested